third_party/move/move-compiler-v2/tests/lambda/inline-parity/nested_lambda.lambda.exp

Diagnostics:
error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/nested_lambda.move:9:15
  │
9 │         apply(|x, y| x + y, 1, apply(|x, y| x * y, 2, 1))
  │               ^^^^^^^^^^^^

error: Currently, lambda expressions must explicitly declare `move` capture of free variables, except when appearing as an argument to an inline functioncall.
  ┌─ tests/lambda/inline-parity/nested_lambda.move:9:38
  │
9 │         apply(|x, y| x + y, 1, apply(|x, y| x * y, 2, 1))
  │                                      ^^^^^^^^^^^^
